# loominum

./: .gitignore  HANDOFF.md  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
data/executor/: config.json
data/loominum/: config.json
data/unbillicord/: config.json
examples/bart-eta/: README.md  pyproject.toml
examples/bart-eta/src/bart_eta/: __init__.py  cli.py
examples/library-overdrive/: README.md  pyproject.toml
examples/library-overdrive/src/library_overdrive/: __init__.py  cli.py
src/executor/: EVENTS.md  NGINX.md  README.md  __init__.py  client.py  common.py  config.py  server.py
src/executor/htdocs/: check-cert.ps1  install-cert.ps1  install-cert.sh
src/executor/scripts/: README.md  install-cert.ps1
src/loominum/: EVENTS.md  NGINX.md  README.md  __init__.py  cdp.py  client.py  common.py  config.py  fetch.py  server.py
src/loominum/htdocs/: README.md  check-cert.ps1  install-cert.ps1  install-cert.sh  remote.js
src/loominum/scripts/: README.md  install-cert.ps1  install-cert.sh
src/unbillicord/: EVENTS.md  NGINX.md  README.md  __init__.py  cdp.py  client.py  common.py  config.py  server.py
src/unbillicord/htdocs/: README.md  check-cert.ps1  evtcap.js  install-cert.ps1  install-cert.sh  remote.js
src/unbillicord/scripts/: README.md  install-cert.ps1  install-cert.sh
tests/: test_cdp.py  test_config.py  test_executor.py  test_fetch.py  test_lum.py  test_ubc.py
